--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,11 @@
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile *ngFor="let remote of remotes">
-    <button mat-button [routerLink]="remote.routePath">{{remote.displayName}}</button>
-  </mat-grid-tile>
-</mat-grid-list>
+<div class="grid-container">
+  <mat-grid-list cols="3" gutterSize="10px">
+    <mat-grid-tile *ngFor="let remote of remotes">
+
+      <div class="custom-button" [routerLink]="">
+        <img [src]="remote.icon" alt="Image Description">
+        <span>{{remote.displayName}}</span>
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
