--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,39 @@
+mat-grid-tile {
+  height: 100px;
+}
+
 .grid-container {
-  // height: 100vh;
+  height: 100vh;
   width: 80%;
   margin: auto;
-  margin-top: 50px;
+  // margin-top: 50px;
+}
+
+.background-image {
+  background-image: url('../../assets/background.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.background-image::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.75);
+  /* Adjust color and opacity for fade effect */
+  z-index: 1;
+}
+
+.background-image>* {
+  position: relative;
+  z-index: 2;
 }
 
 .custom-button {
@@ -11,24 +42,18 @@
   align-items: center;
   justify-content: center;
   border-radius: 10px;
-  background-color: #f0f0f0;
+  background-color: #3f51b5;
   cursor: pointer;
   padding: 15px;
   text-align: center;
   transition: transform 0.3s ease, background-color 0.3s ease;
-  /* Transition for transform and background color */
-  /* Other styles */
   width: 150px;
-  /* Adjusted width */
   height: 150px;
-  /* Adjusted height */
 }
 
 .custom-button:hover {
   transform: scale(1.05);
-  /* Scale up by 5% */
-  background-color: #e0e0e0;
-  /* Optional: Change background color on hover */
+  background-color: #3f51b5;
 }
 
 .custom-button img {
@@ -37,10 +62,11 @@
   height: auto;
   margin-bottom: 10px;
   padding: 20px;
+  filter: invert(100%);
 }
 
 .custom-button span {
   font-weight: bold;
-  font-size: 16px;
-  color: #333;
+  font-size: 20px;
+  color: #ffffff;
 }
