--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,12 @@
 
       <mat-grid-tile *ngFor="let remote of remotes">
         <div class="custom-button" [routerLink]="remote.routePath">
-          <img [src]="remote.icon" alt="Image Description">
+          <!-- <img [src]="remote.icon" alt="Image Description"> -->
+          <mat-icon class="material-symbols-outlined custom-icon" fontIcon="shield"></mat-icon>
           <span>{{remote.displayName}}</span>
         </div>
       </mat-grid-tile>
-      
+
     </mat-grid-list>
   </div>
 </div>
