--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 mat-grid-tile {
-  height: 100px;
+  height: 80px;
 }
 
 .grid-container {
@@ -47,8 +47,8 @@ mat-grid-tile {
   padding: 15px;
   text-align: center;
   transition: transform 0.3s ease, background-color 0.3s ease;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
 
 .custom-button:hover {
@@ -56,17 +56,35 @@ mat-grid-tile {
   background-color: #3f51b5;
 }
 
-.custom-button img {
-  width: 75px;
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-  padding: 20px;
-  filter: invert(100%);
-}
+// .custom-button img {
+//   width: 75px;
+//   max-width: 100%;
+//   height: auto;
+//   margin-bottom: 10px;
+//   padding: 20px;
+//   filter: invert(100%);
+// }
 
 .custom-button span {
   font-weight: bold;
   font-size: 20px;
   color: #ffffff;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
+.custom-icon {
+  font-size: 80px;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  // margin-bottom: 10px;
+  // padding: 20px;
+  filter: invert(100%);
 }
