--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,7 +10,7 @@ mat-grid-tile {
 }
 
 .background-image {
-  background-image: url('../../assets/background.png');
+  background-image: url('../../../assets/background.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
