--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
-<mat-toolbar color="primary">
-  <a [routerLink]="['']" class="toolbar-logo">
-    <img src="assets/logo.png" alt="Logo">
-  </a>
-  <button mat-button class="toolbar-title-button" [routerLink]="['']">
-    {{title | titlecase}}
-  </button>
-  <!-- <button mat-button *ngFor="let remote of remotes" [routerLink]="remote.routePath">
-    {{remote.displayName}}
-  </button> -->
-  <app-menu-item></app-menu-item>
+<app-navbar [title]="title"></app-navbar>
 
-  <span class="spacer"></span>
-</mat-toolbar>
-
+<!-- <div class="content"> -->
 <router-outlet></router-outlet>
+<!-- </div> -->
