--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,5 @@
-.toolbar-logo img {
-  height: 50px;
-  padding: 5px 10px 0px 0px;
-}
 
-.toolbar-title-button {
-  font-family:titillium web,sans-serif;
-  font-size:1.5rem!important;
-  padding-top:0!important;
-  margin-right:2rem!important;
-}
 
-.spacer {
-  flex: 1 1 auto;
-}
-
-router-outlet {
-  padding-top: 50px;
+.content {
+  margin-top: 60px;
 }
