--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,12 +1,12 @@
-mat-grid-tile {
-  height: 80px;
-}
+// mat-grid-tile {
+//   height: 80px;
+// }
 
 .grid-container {
   height: 100vh;
   width: 80%;
   margin: auto;
-  // margin-top: 50px;
+  margin-top: 60px;
 }
 
 .background-image {
