--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
-<mat-toolbar color="primary" class="toolbar">
-    <a [routerLink]="['']" class="toolbar-logo">
-      <img src="assets/logo.png" alt="Logo">
-    </a>
-    <button mat-button class="toolbar-title-button" [routerLink]="['']">
-      {{title | titlecase}}
-    </button>
-    <button mat-button *ngFor="let remote of remotes" [routerLink]="remote.routePath">
-      {{remote.displayName}}
-    </button>
-  
-    <span class="spacer"></span>
-  </mat-toolbar>
+<mat-toolbar color="primary" class="toolbar mat-elevation-z6">
+  <a [routerLink]="['']" class="toolbar-logo">
+    <img src="assets/logo.png" alt="Logo">
+  </a>
+  <button mat-button class="toolbar-title-button" [routerLink]="['']">
+    {{title | titlecase}}
+  </button>
+  <button mat-button *ngFor="let remote of remotes" [routerLink]="remote.routePath">
+    {{remote.displayName}}
+  </button>
+
+  <span class="spacer"></span>
+</mat-toolbar>
